# dx11

./: .clang-format  .gitattributes  .gitconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  build.bat  build_run.bat  dx11.sln  generate.bat  run.bat
assets/meshes/: bunny.mtl  cube.mtl  sponza.mtl
assets/meshes/ayanami_rei/: ayanami_rei.mtl
assets/textures/: flare0.dds
assets/textures/bumbpy_bricks/: bumpy_bricks.mtz
assets/textures/marble/: marble.mtz
assets/textures/wood_floor/: wood_floor.mtz
assimp/lib/: assimp-vc143-mt.exp
basics/: Actor.h  BasicPS.hlsl  BasicVS.hlsl  BasicsConfig.h.in  CMakeLists.txt  Camera.h  CubeMap.cpp  DeviceResources.h  DynamicCubeMap.cpp  Game.cpp  Game.h  InputLayout.cpp  InputLayout.h  Keyboard.cpp  Keyboard.h  LightHelper.h  MeshGenerator.cpp  Mouse.cpp  Mouse.h  PhongPS.hlsl  Renderer.cpp  Renderer.h  ShadowMap.cpp  ShadowVS.hlsl  Utils.cpp  Utils.h  VertexShader.hlsl  dx11.cpp  packages.config
bloom/: CMakeLists.txt
bloom/include/: DynamicCubeMap.h  Game.h  ParticleSystem.h  RenderTexture.h  ShaderManager.h  ShadowMap.h
bloom/shader/: Bloom.hlsli  BloomPS.hlsl  BlurPS.hlsl  BrightPS.hlsl  Fog.hlsli  LightPS.hlsl  LightVS.hlsl  ParticlePS.hlsl  PhongPS.hlsl  ShadowPS.hlsl
bloom/src/: Game.cpp  ParticleSystem.cpp  RenderTexture.cpp  ShadowMap.cpp  bloom.cpp  dx11.cpp
common/: CMakeLists.txt  Camera.cpp  Camera.h  DynamicConstBuffer.h  Game.cpp  Game.h  InputLayout.cpp  InputLayout.h  MeshGenerator.h  ShaderManager.cpp  ShaderManager.h  VertexBuffer.cpp
common/include/: Actor.h  Camera.h  DeviceResources.h  DynamicConstBuffer.h  InputLayout.h  Renderer.h  ShaderManager.h  Texture.h
common/src/: Camera.cpp  DeviceResources.cpp  DynamicConstBuffer.cpp  Game.cpp  MeshGenerator.cpp  Renderer.cpp  ShaderManager.cpp  Texture.cpp  VertexBuffer.cpp
dx11/: CMakeLists.txt  Camera.h  D3DCommonTypes.h  D3DHelper.cpp  D3DHelper.h  DeviceResources.c  DeviceResources.cpp  DeviceResources.h  DrawGS.hlsl  DrawVS.hlsl  Game.c  Game.cpp  Game.h  Keyboard.cpp  Keyboard.h  LightPS.hlsl  LightingHelper.hlsli  Math.c  Math.cpp  Math.h  Mouse.c  Mouse.cpp  Mouse.h  ParticleGS.hlsl  ParticlePS.hlsl  ParticleSystem.cpp  ParticleSystem.h  ParticleSystem.hlsli  ParticleVS.hlsl  PhongPS.hlsl  PixelShader.hlsl  PixelShaderPS.hlsl  Renderer.c  Renderer.cpp  Renderer.h  Resource.h  Shader.cpp  Shader.h  StreamOutGS.hlsl  StreamOutVS.hlsl  (+13 more)
dx11/dxut/: dxerr.cpp
fog/: CMakeLists.txt
fog/include/: DynamicCubeMap.h  FogGame.h  Game.h  ParticleSystem.h  Renderer.h  fog.h
fog/shader/: Common.hlsli  Fog.hlsli  FogPS.hlsl  FogVS.hlsl  PS.hlsl  Particle.hlsli  PhongPS.hlsl  VS.hlsl
fog/src/: Camera.cpp  DeviceResources.cpp  FogGame.cpp  Game.cpp  MeshGenerator.cpp  ShadowMap.cpp  dx11.cpp  fog.cpp
imgui-1.87/: CMakeLists.txt
input/: CMakeLists.txt  Mouse.h
math/: CMakeLists.txt  Math.cpp  NE_Math.cpp  NE_Math.h
objloader/: CMakeLists.txt  objloader.cpp  objloader.h
particle-system/: Actor.cpp  Actor.h  CMakeLists.txt  Camera.h  CubeMap.h  DynamicCubeMap.h  Game.cpp  Game.h  Image.h  InputLayout.cpp  InputLayout.h  Math.cpp  Math.h  MeshGenerator.cpp  MeshGenerator.h  Particle.hlsli  ParticlePS.hlsl  ParticleSystem.cpp  ParticleSystem.h  ParticleVS.hlsl  Renderer.cpp  Utils.cpp  dx11.cpp  objloader.h
particle-system/include/: CubeMap.h  Game.h  Image.h  ParticleSystem.h  ShadowMap.h  Timer.h  stb_image.h
particle-system/shader/: LightingHelper.hlsli  Particle.hlsli  ParticlePS.hlsl  PixelShader.hlsl  Sky.hlsli  SkyPS.hlsl
particle-system/src/: DynamicCubeMap.cpp  Game.cpp  ParticleSystem.cpp  dx11.cpp
reflections/: Actor.cpp  Actor.h  CMakeLists.txt  Camera.cpp  Camera.h  Common.hlsli  CubeMap.cpp  CubeMap.h  DeviceResources.cpp  DeviceResources.h  DynamicCubeMap.cpp  DynamicCubeMap.h  Game.cpp  Game.h  InputLayout.cpp  InputLayout.h  Keyboard.cpp  Keyboard.h  LightHelper.h  LightingHelper.hlsli  Math.cpp  Math.h  MeshGenerator.cpp  MeshGenerator.h  Mouse.cpp  Mouse.h  PhongPS.hlsl  Renderer.cpp  Renderer.h  ShadowMap.cpp  ShadowMap.h  Sky.hlsli  SkyVS.hlsl  Utils.cpp  Utils.h  VertexShader.hlsl  dx11.cpp  dx11.rc  objloader.cpp  objloader.h  (+2 more)
shadows/: Actor.c  Actor.cpp  Actor.h  CMakeLists.txt  Camera.c  Camera.cpp  Camera.h  Common.hlsli  DeviceResources.cpp  DeviceResources.h  Game.c  Game.cpp  Game.h  Keyboard.c  Keyboard.cpp  Keyboard.h  LightHelper.h  LightPS.hlsl  LightingHelper.hlsli  Math.c  Math.cpp  Math.h  MeshGenerator.cpp  MeshGenerator.h  Mouse.c  Mouse.cpp  Mouse.h  PhongPS.hlsl  Renderer.c  Renderer.cpp  Renderer.h  Resource.h  ShadowMap.c  ShadowMap.cpp  ShadowMap.h  Timer.h  Utils.c  Utils.cpp  Utils.h  VertexShader.hlsl  (+9 more)
soft-shadows/: Actor.cpp  Actor.h  CMakeLists.txt  Common.hlsli  Game.cpp  Game.h  LightingHelper.hlsli  PhongPS.hlsl  Renderer.cpp  ShadowVS.hlsl  SoftShadowsConfig.h.in  VertexShader.hlsl  dx11.cpp
soft-shadows/include/: Camera.h  CubeMap.h  DeviceResources.h  DynamicCubeMap.h  Game.h  InputLayout.h  MeshGenerator.h  Mouse.h  Observer.h  ParticleSystem.h  Renderer.h  ShaderManager.h  ShaderReflection.h  Utils.h  ZepEditor.h
soft-shadows/shader/: Common.hlsli  LightPS.hlsl  LightingHelper.hlsli  PhongPS.hlsl  ShadowPS.hlsl  ShadowVS.hlsl
soft-shadows/src/: Actor.cpp  Camera.cpp  CubeMap.cpp  DeviceResources.cpp  Game.cpp  InputLayout.cpp  Mouse.cpp  ParticleSystem.cpp  Renderer.cpp  ShaderManager.cpp  ShadowMap.cpp  Utils.cpp  ZepEditor.cpp  dx11.cpp
sponza/: CMakeLists.txt
sponza/include/: Actor.h  AssetManager.h  Buffer.h  DynamicCubeMap.h  ModelLoader.h  ParticleSystem.h  ShadowMap.h  SponzaGame.h
sponza/shader/: ColorVS.hlsl  Common.hlsli  LightingHelper.hlsli  PhongPS.hlsl
sponza/src/: Actor.cpp  AssetManager.cpp  ModelLoader.cpp  ParticleSystem.cpp  ShadowMap.cpp  SponzaGame.cpp  main.cpp
test/: CMakeLists.txt  main.cpp
utils/: CMakeLists.txt  Timer.h  Utils.cpp  Utils.h
zep/src/: editor.cpp
